--- a/Hidden/index.html
+++ b/Hidden/index.html
@@ -61,7 +61,7 @@
             <li>
               <div class="panel radius">
                 <a href="articcamo.html">
-                  <img src="../img/articcamo.jpg" alt="FPO">
+                  <img src="../img/ArticCamo.jpg" alt="FPO">
                 </a>
                 <h5 class="right">$3000</h5>
                 <h4>Artic Camo</h4>
