commit to hidden 1
logo on bot

--- a/Hidden/articcamo.html
+++ b/Hidden/articcamo.html
@@ -53,7 +53,7 @@
           <img class="product-image" src="../img/fpo.png" alt="FPO">
         </div>
         <div class="column medium-6">
-          <h1 class="product-title">Artic Camo</h1>
+          <h1 class="product-title">Arctic Camo</h1>
           <h2 class="product-price">$3000</h2>
           <p class="product-description">Red lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
           <p><a class="button radius" href="../cart.html">Add to Cart</a></p>
