--- a/shop.html
+++ b/shop.html
@@ -89,7 +89,7 @@
                 <h4>Navy Strong</h4>
                 <ul class="inline-list">
                   <li><a href="sale/index.html">Sale</a></li>
-                  <li><a href="Popluar/index.html">Popular</a>
+                  <li><a href="popluar/index.html">Popular</a>
                 </ul>
               </div>
             </li>
