--- a/shop.html
+++ b/shop.html
@@ -70,7 +70,7 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="style/blackdust.html">
+                <a href="Style/blackdust.html">
                   <img src="img/blackdust.png" alt="FPO">
                 </a>
                 <h5 class="right">$2000</h5>
