--- a/shop2.html
+++ b/shop2.html
@@ -58,7 +58,7 @@
           <ul class="medium-block-grid-2 large-block-grid-3">
             <li>
               <div class="panel radius">
-                <a href="style/blueleather.html">
+                <a href="Style/blueleather.html">
                   <img src="img/blueleather.jpg" alt="FPO">
                 </a>
                 <h5 class="right">$3000</h5>
