--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>It's A Wrap | Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/main.css" />
     <script async src="https://use.fontawesome.com/6bb1a4446e.js"></script>
@@ -47,8 +48,63 @@
          </figure>
       </section>
 
-    <footer>
-      
+   
+ <main class="product-grid">
+
+      <div class="row">
+        <div class="column">
+          <h1>Shop</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column">
+          <ul class="medium-block-grid-2 large-block-grid-3">
+            <li>
+              <div class="panel radius">
+                <a href="Style/golddust.html">
+                  <img src="img/golddust.png" alt="FPO">
+                </a>
+                <h5 class="right">$2000</h5>
+                <h4>Gold Dust</h4>
+                <ul class="inline-list">
+                  <li><a href="sale/index.html">Sale</a></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div class="panel radius">
+                <a href="Style/blackdust.html">
+                  <img src="img/blackdust.png" alt="FPO">
+                </a>
+                <h5 class="right">$2000</h5>
+                <h4>Black Dust</h4>
+                <ul class="inline-list">
+                  <li><a href="sale/index.html">Sale</a></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div class="panel radius">
+                <a href="Hidden/navystrong.html">
+                  <img src="img/navystrong.jpg" alt="FPO">
+                </a>
+                <h5 class="right">$3000</h5>
+                <h4>Navy Strong</h4>
+                <ul class="inline-list">
+                  <li><a href="sale/index.html">Sale</a></li>
+                  <li><a href="popluar/index.html">Popular</a></li>
+                </ul>
+              </div>
+            </li>
+            </ul>
+          </div>
+        </div>
+      </main>
+
+
+
+<footer>     
   <div class="row">
 
     <div class="column large-2">
