--- a/Style/blackdust.html
+++ b/Style/blackdust.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Site | Category | Matte Black</title>
+    <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <script async src="https://use.fontawesome.com/6bb1a4446e.js"></script>
