--- a/shop3.html
+++ b/shop3.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Site | Shop</title>
+    <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
     <link rel="stylesheet" href="css/foundation.css" />
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
