--- a/Hidden/armystrong.html
+++ b/Hidden/armystrong.html
@@ -56,7 +56,7 @@
         <div class="column medium-6">
           <h1 class="product-title">Army Strong</h1>
           <h2 class="product-price">$3000</h2>
-          <p class="product-description">Red lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        
           <p><a class="button radius" href="../cart.html">Add to Cart</a></p>
         </div>
       </div>
@@ -71,19 +71,19 @@
       </div>
       <div class="row">
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+          <a href="Hidden/articcamo.html">
+                  <img src="../img/ArticCamo.jpg" alt="FPO">
         </div>
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+          <a href="Hidden/tricamo.html">
+                  <img src="../img/tricamowrap.jpg" alt="FPO">
+                </a>
+
         </div>
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+          <a href="Hidden/navystrong.html">
+                  <img src="../img/navystrong.jpg" alt="FPO">
+                </a>
         </div>
       </div>
     </aside>
