--- a/Luxury/index.html
+++ b/Luxury/index.html
@@ -52,8 +52,7 @@
       <div class="row">
         <div class="column">
           <h1>Luxury</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua.</p> 
+          <p>Like Riding in Luxury these are the wraps to show your liven large</p> 
         </div>
       </div>
 
