--- a/Sale/index.html
+++ b/Sale/index.html
@@ -22,7 +22,7 @@
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
           <li class="name">
-            <h1><a  href="../index.html"><img src="img/itsawraplogo.svg" class="logo"></a></h1>
+            <h1><a  href="../index.html"><img src="../img/itsawraplogo.svg" class="logo"></a></h1>
           </li>
           <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
         </ul>
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="column">
           <h1>Sale</h1>
-          <p>DESCRIPTION OF THE WRAP</p> 
+          <p></p> 
         </div>
       </div>
 
@@ -72,7 +72,7 @@
             <li>
 
               <div class="panel radius">
-                <a href="blackdust.html">
+                <a href="../blackdust.html">
                   <img src="../img/blackdust.png" alt="FPO">
                 </a>
                 <h5 class="right">$2000</h5>
