--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       </section>
 
    
- <main class="product-grid">
+ <main class="popluar">
 
       <div class="row">
         <div class="column">
-          <h1>Shop</h1>
+          <h1>Popular Products</h1>
         </div>
       </div>
 
@@ -93,7 +93,7 @@
                 <h4>Navy Strong</h4>
                 <ul class="inline-list">
                   <li><a href="sale/index.html">Sale</a></li>
-                  <li><a href="popluar/index.html">Popular</a></li>
+                  <li><a href="popular/index.html">Popular</a></li>
                 </ul>
               </div>
             </li>
