--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
           <li class="name">
-             <h1><a  href="../index.html"><img src="img/itsawraplogo.svg" class="logo"></a></h1>
+             <h1><a  href="index.html"><img src="img/itsawraplogo.svg" class="logo"></a></h1>
           <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
         </ul>
         <section class="top-bar-section">
@@ -90,13 +90,13 @@
                 <h4>Navy Strong</h4>
                 <ul class="inline-list">
                   <li><a href="sale/index.html">Sale</a></li>
-                  <li><a href="popluar/index.html">Popular</a>
+                  <li><a href="popular/index.html">Popular</a>
                 </ul>
               </div>
             </li>
             <li>
               <div class="panel radius">
-                <a href="pages/page.html">
+                <a href="Style/iced.html">
                   <img src="img/iced.png" alt="FPO">
                 </a>
                 <h5 class="right">$2000</h5>
@@ -109,13 +109,13 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="pages/page.html">
+                <a href="Luxury/louisvuitton.html">
                   <img src="img/lvwarp.jpg" alt="FPO">
                 </a>
                 <h5 class="right">$7000</h5>
                 <h4>Louis Vuitton</h4>
                 <ul class="inline-list">
-                <li><a href="Popluar/index.html">Popular</a>
+                <li><a href="Popular/index.html">Popular</a>
                 <li><a href="Top of the line/index.html">Top Of The Line</a>
 
                   
@@ -124,13 +124,13 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="pages/page.html">
+                <a href="Luxury/goldfoil.html">
                   <img src="img/goldfoil.jpg" alt="FPO">
                 </a>
-                <h5 class="right">$10</h5>
+                <h5 class="right">$10000</h5>
                 <h4>Gold Foil</h4>
                 <ul class="inline-list">
-                  <li><a href="Popluar/index.html">Popular</a>
+                  <li><a href="Popular/index.html">Popular</a>
                 <li><a href="Top of the line/index.html">Top Of The Line</a>
                 </ul>
               </div>
