--- a/shop3.html
+++ b/shop3.html
@@ -21,7 +21,7 @@
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
           <li class="name">
-             <h1><a  href="../index.html"><img src="img/itsawraplogo.svg" class="logo"></a></h1>
+             <h1><a  href="index.html"><img src="img/itsawraplogo.svg" class="logo"></a></h1>
           <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
         </ul>
         <section class="top-bar-section">
@@ -59,73 +59,77 @@
           <ul class="medium-block-grid-2 large-block-grid-3">
             <li>
               <div class="panel radius">
-                <a href="pages/page.html">
-                  <img src="img/fpo.png" alt="FPO">
+                <a href="luxury/chormefoil.html">
+                  <img src="img/chormefoil.jpg" alt="FPO">
                 </a>
-                <h5 class="right">$10</h5>
-                <h4>Product Name</h4>
+                <h5 class="right">$10000</h5>
+                <h4>Chorme Foil</h4>
                 <ul class="inline-list">
-                  <li><a href="#">Tag link</a></li>
+                   <li><a href="popular/index.html">Popular</a>
+                     <li><a href="Top of the line/index.html">Top Of The Line</a>
+
                 </ul>
               </div>
             </li>
             <li>
               <div class="panel radius">
-                <a href="pages/page.html">
-                  <img src="img/fpo.png" alt="FPO">
+                <a href="hidden/bamboo.html">
+                  <img src="img/bamboo.jpg" alt="FPO">
                 </a>
-                <h5 class="right">$10</h5>
-                <h4>Product Name</h4>
+                <h5 class="right">$2000</h5>
+                <h4>Bamboo</h4>
                 <ul class="inline-list">
-                  <li><a href="#">Tag link</a></li>
+                   <li><a href="sale/index.html">Sale</a></li>
                 </ul>
               </div>
             </li>
             <li>
               <div class="panel radius">
-                <a href="pages/page.html">
-                  <img src="img/fpo.png" alt="FPO">
+                <a href="style/stripedout.html">
+                  <img src="img/stripedout.jpg" alt="FPO">
                 </a>
-                <h5 class="right">$10</h5>
-                <h4>Product Name</h4>
+                <h5 class="right">$3000</h5>
+                <h4>Striped Out</h4>
                 <ul class="inline-list">
-                  <li><a href="#">Tag link</a></li>
+ <li><a href="popular/index.html">Popular</a>
+   <li><a href="Top of the line/index.html">Top Of The Line</a>
+
                 </ul>
               </div>
             </li>
             <li>
               <div class="panel radius">
-                <a href="pages/page.html">
-                  <img src="img/fpo.png" alt="FPO">
+                <a href="hidden/tricamo.html">
+                  <img src="img/tricamowrap.jpg" alt="FPO">
                 </a>
-                <h5 class="right">$10</h5>
-                <h4>Product Name</h4>
+                <h5 class="right">$3000</h5>
+                <h4>Tri Camo</h4>
                 <ul class="inline-list">
-                  <li><a href="#">Tag link</a></li>
+                   <li><a href="sale/index.html">Sale</a></li>
                 </ul>
               </div>
             </li>
             <li>
               <div class="panel radius">
-                <a href="pages/page.html">
-                  <img src="img/fpo.png" alt="FPO">
+                <a href="hidden/articcamo.html">
+                  <img src="img/ArticCamo.jpg" alt="FPO">
                 </a>
-                <h5 class="right">$10</h5>
-                <h4>Product Name</h4>
+                <h5 class="right">$3000</h5>
+                <h4>Arctic Camo</h4>
                 <ul class="inline-list">
-                  <li><a href="#">Tag link</a></li>
+                   <li><a href="sale/index.html">Sale</a></li>
                 </ul>
               </div>
             </li>
             <li>
               <div class="panel radius">
-                <a href="pages/page.html">
-                  <img src="img/fpo.png" alt="FPO">
+                <a href="hidden/page.html">
+                  <img src="img/digitalcamo.jpg" alt="FPO">
                 </a>
-                <h5 class="right">$10</h5>
-                <h4>Product Name</h4>
+                <h5 class="right">$3000</h5>
+                <h4>Digital Camo</h4>
                 <ul class="inline-list">
-                  <li><a href="#">Tag link</a></li>
+                 <li><a href="popular/index.html">Popular</a>
                 </ul>
               </div>
             </li>
@@ -140,7 +144,7 @@
     <li class="arrow unavailable"><a href="">&laquo;</a></li>
     <li class="current"><a href="shop.html">1</a></li>
     <li><a href="shop2.html">2</a></li>
-    <li><a href="shop3.html">3</a></li>
+     <li class="active"><a href="shop3.html">3</a></li>
     <li class="arrow"><a href="shop2.html">&raquo;</a></li>
   </ul>
 </div>
