--- a/Hidden/articcamo.html
+++ b/Hidden/articcamo.html
@@ -51,19 +51,18 @@
 
       <div class="row">
         <div class="column medium-6">
-          <img class="product-image" src="../img/fpo.png" alt="FPO">
+          <img class="product-image" src="../img/Articcamo.jpg" alt="FPO">
         </div>
         <div class="column medium-6">
           <h1 class="product-title">Arctic Camo</h1>
           <h2 class="product-price">$3000</h2>
-          <p class="product-description">Red lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
           <p><a class="button radius" href="../cart.html">Add to Cart</a></p>
         </div>
       </div>
 
     </main>
 
-    <aside>
+  <aside>
       <div class="row">
         <div class="column">
           <h1>Related</h1>
@@ -71,23 +70,22 @@
       </div>
       <div class="row">
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+          <a href="Hidden/articcamo.html">
+                  <img src="../img/armystrong.jpg" alt="FPO">
         </div>
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+          <a href="Hidden/tricamo.html">
+                  <img src="../img/tricamowrap.jpg" alt="FPO">
+                </a>
+
         </div>
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+          <a href="Hidden/navystrong.html">
+                  <img src="../img/navystrong.jpg" alt="FPO">
+                </a>
         </div>
       </div>
     </aside>
-
     <!-- Footer -->
     <footer></footer>
     
