--- a/Luxury/goldfoil.html
+++ b/Luxury/goldfoil.html
@@ -56,14 +56,13 @@
         <div class="column medium-6">
           <h1 class="product-title">Gold Foil</h1>
           <h2 class="product-price">$10000</h2>
-          <p class="product-description">Red lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
           <p><a class="button radius" href="../cart.html">Add to Cart</a></p>
         </div>
       </div>
 
     </main>
 
-    <aside>
+  <aside>
       <div class="row">
         <div class="column">
           <h1>Related</h1>
@@ -71,19 +70,19 @@
       </div>
       <div class="row">
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+<a href="thaigold.html">
+                  <img src="../img/thaigoldwrap.jpg" alt="FPO">
+                </a>
         </div>
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
-        </div>
+          <a href="louisvuitton.html">
+                  <img src="../img/lvwarp.jpg" alt="FPO">
+                </a>
+        </div>  
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+          <a href="goldfoil.html">
+                  <img src="../img/chormefoil.jpg" alt="FPO">
+                </a>
         </div>
       </div>
     </aside>
