--- a/Luxury/thaigold.html
+++ b/Luxury/thaigold.html
@@ -56,7 +56,6 @@
         <div class="column medium-6">
           <h1 class="product-title">Thai Gold</h1>
           <h2 class="product-price">$4000</h2>
-          <p class="product-description">Red lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
           <p><a class="button radius" href="../cart.html">Add to Cart</a></p>
         </div>
       </div>
@@ -71,23 +70,22 @@
       </div>
       <div class="row">
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+<a href="thaigold.html">
+                  <img src="../img/redandgoldwrap.jpg" alt="FPO">
+                </a>
         </div>
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
-        </div>
+          <a href="louisvuitton.html">
+                  <img src="../img/lvwarp.jpg" alt="FPO">
+                </a>
+        </div>  
         <div class="column medium-4">
-          <a href="../pages/page.html">
-            <img src="../img/fpo.png" alt="For placement only">
-          </a>
+          <a href="goldfoil.html">
+                  <img src="../img/chormefoil.jpg" alt="FPO">
+                </a>
         </div>
       </div>
     </aside>
-
     <!-- Footer -->
     <footer>
       
