--- a/Style/index.html
+++ b/Style/index.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="column">
           <h1>Style</h1>
-          <p>DESCRIPTION OF THE WRAP</p> 
+          <p>These are the most style driven wrap that you will find anywhere</p> 
         </div>
       </div>
 
