--- a/Top Of The Line/index.html
+++ b/Top Of The Line/index.html
@@ -28,9 +28,9 @@
         </ul>
         <section class="top-bar-section">
           <ul class="right">
-              <li><a href="../Style/index.html">Style</a></li>
-               <li><a href="../Luxury/index.html">Luxury</a></li>
-               <li><a href="../Hidden/index.html">Hidden</a></li>
+              <li><a href="../style/index.html">Style</a></li>
+               <li><a href="../luxury/index.html">Luxury</a></li>
+               <li><a href="../hidden/index.html">Hidden</a></li>
             <li class="divider"></li>
             <li><a href="../shop.html">Shop</a></li>
             <li class="divider"></li>
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="column">
           <h1>Top Of The Line</h1>
-          <p>DESCRIPTION OF THE WRAP</p> 
+          <p></p> 
         </div>
       </div>
 
@@ -72,7 +72,7 @@
             <li>
 
               <div class="panel radius">
-                <a href="blackdust.html">
+                <a href="../blackdust.html">
                   <img src="../img/blackdust.png" alt="FPO">
                 </a>
                 <h5 class="right">$2000</h5>
