--- a/shop2.html
+++ b/shop2.html
@@ -21,7 +21,7 @@
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
           <li class="name">
- <h1><a  href="../index.html"><img src="img/itsawraplogo.svg" class="logo"></a></h1>
+ <h1><a  href="index.html"><img src="img/itsawraplogo.svg" class="logo"></a></h1>
           <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
         </ul>
         <section class="top-bar-section">
@@ -91,7 +91,7 @@
                 <h5 class="right">$3000</h5>
                 <h4>Red and Gold</h4>
                 <ul class="inline-list">
-                  <li><a href="Popluar/index.html">Popular</a>
+                  <li><a href="popular/index.html">Popular</a>
                 </ul>
               </div>
             </li>
@@ -110,13 +110,13 @@
             </li>
             <li>
               <div class="panel radius">
-                <a href="hidden/armycamo.html">
+                <a href="Hidden/armystrong.html">
                   <img src="img/armystrong.jpg" alt="FPO">
                 </a>
                 <h5 class="right">$3000</h5>
                 <h4>Army Strong</h4>
                 <ul class="inline-list">
-             <li><a href="Popluar/index.html">Popular</a>
+             <li><a href=popular/index.html">Popular</a>
 
                   
                 </ul>
@@ -130,8 +130,8 @@
                 <h5 class="right">$4000</h5>
                 <h4>Thai Gold</h4>
                 <ul class="inline-list">
-                <li><a href="Popluar/index.html">Popular</a>
-                  <li><a href="Popluar/index.html">Top of The Line </a>
+                <li><a href="popular/index.html">Popular</a>
+                  <li><a href="popluar/index.html">Top of The Line </a>
                   
                 </ul>
               </div>
@@ -146,7 +146,7 @@
   <ul class="pagination">
     <li class="arrow unavailable"><a href="">&laquo;</a></li>
     <li class="current"><a href="shop.html">1</a></li>
-    <li><a href="shop2.html">2</a></li>
+    <li class="active"><a href="shop2.html">2</a></li>
     <li><a href="shop3.html">3</a></li>
     <li class="arrow"><a href="shop3.html">&raquo;</a></li>
   </ul>
